--- a/20240718T060528--lisps-grandfather-paradox__clojure_lisp_scheme.html
+++ b/20240718T060528--lisps-grandfather-paradox__clojure_lisp_scheme.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2024-07-29 Mon 22:08 -->
+<!-- 2024-07-29 Mon 22:21 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Lisp's grandfather paradox</title>
@@ -664,7 +664,7 @@ modulo, a predicate function that checks if a number is prime, etc.
 Both a <a href="https://gist.github.com/danielsz/c977ec15c4bb2804052d2493e04a8ed8">Clojure version</a> and a <a href="https://gist.github.com/danielsz/c7e6588c35e523295134133ca38d6943">Scheme version</a> are available.
 </p>
 
-<div class="hiring" id="orged718c0">
+<div class="hiring" id="org1604263">
 <p>
 <b>Open for work</b>
 </p>
@@ -679,10 +679,11 @@ little boost or a long-term commitment? Let's <a href="mailto:daniel.szmulewicz@
 
 <p>
 Because it's possible to compose all the familiar arithmetic functions
-with this technique, David Hilbert, who instigated the efforts to
-rehabilitate mathematics through finitistic means, conjectured that
-all computable functions were primitive recursive. In 1927, two of his
-students, Gabriel Sudan and Wilhelm Ackermann, proved him wrong.
+within the framework of primitive recursion, David Hilbert, who
+instigated the efforts to rehabilitate mathematics through finitistic
+means, conjectured that all computable functions were primitive
+recursive. In 1927, two of his students, Gabriel Sudan and Wilhelm
+Ackermann, proved him wrong.
 </p>
 
 <div class="org-src-container">
@@ -778,7 +779,7 @@ but rather to embrace him, bring him back to life, even if for a
 moment.
 </p>
 
-<div class="contact" id="org8766b48">
+<div class="contact" id="org8d73e6a">
 <p>
 Wow, you've made it! Right up to the end! So you're into this kind of
 stuff, aren't you?! Maybe we should be friends! What's more, I might
@@ -789,7 +790,7 @@ something you'd sign up for, please let me <a href="mailto:daniel.szmulewicz@gma
 
 </div>
 
-<div class="bibliography" id="org1977d82">
+<div class="bibliography" id="org118dcd1">
 <p>
 Bibliography
 </p>
