--- a/20240718T060528--lisps-grandfather-paradox__clojure_lisp_scheme.html
+++ b/20240718T060528--lisps-grandfather-paradox__clojure_lisp_scheme.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2024-07-29 Mon 22:21 -->
+<!-- 2024-07-29 Mon 23:27 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Lisp's grandfather paradox</title>
@@ -664,7 +664,7 @@ modulo, a predicate function that checks if a number is prime, etc.
 Both a <a href="https://gist.github.com/danielsz/c977ec15c4bb2804052d2493e04a8ed8">Clojure version</a> and a <a href="https://gist.github.com/danielsz/c7e6588c35e523295134133ca38d6943">Scheme version</a> are available.
 </p>
 
-<div class="hiring" id="org1604263">
+<div class="hiring" id="org229832b">
 <p>
 <b>Open for work</b>
 </p>
@@ -726,7 +726,7 @@ Intuitively, primitive recursion corresponds to functions that can be
 computed with an understanding in advance about how far one must
 search for an answer. General computability includes functions in
 which one needs to search finitely far but without knowing how far
-that might be.
+that might be. 
 </p>
 
 <p>
@@ -736,13 +736,6 @@ the FlooP languages to illustrate the difference between bounded loops
 recursion and general recursion respectively. Adding unbounded loops
 makes the language general recursive and Turing-complete, as are all
 real-world computer programming languages. (Hofstadter, Douglas R., 1999)
-</p>
-
-<p>
-The definition of primitive recursive functions implies that their
-computation halts on every input (after a finite number of steps). On
-the other hand, the halting problem is undecidable for general
-recursive functions.
 </p>
 
 <p>
@@ -779,7 +772,7 @@ but rather to embrace him, bring him back to life, even if for a
 moment.
 </p>
 
-<div class="contact" id="org8d73e6a">
+<div class="contact" id="org410c385">
 <p>
 Wow, you've made it! Right up to the end! So you're into this kind of
 stuff, aren't you?! Maybe we should be friends! What's more, I might
@@ -790,7 +783,7 @@ something you'd sign up for, please let me <a href="mailto:daniel.szmulewicz@gma
 
 </div>
 
-<div class="bibliography" id="org118dcd1">
+<div class="bibliography" id="orgda28636">
 <p>
 Bibliography
 </p>
